<package>
  <name>guardian_description</name>
  <version>0.1.0</version>
  <description>guardian_description. This package contains the meshes and urdf files of the robot.</description>
  <maintainer email="rguzman@robotnik.es">Roberto Guzmán</maintainer>
  <maintainer email="rnavarro@robotnik.es">Román Navarro</maintainer>

  <author email="rguzman@robotnik.es">Roberto Guzmán</author>

  <license>BSD</license>
  <url>http://ros.org/wiki/guardian_description</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>gazebo</build_depend>

  <run_depend>gazebo</run_depend>

  <export>
	<gazebo gazebo_media_path="${prefix}"/>
  </export>

</package>

