<?xml version="1.0"?>
<package>
  <name>robotnik_wam_description</name>
  <version>0.1.0</version>
  <description>The robotnik_wam_description package. This package contains the description (mechanical, kinematic, visual,
  etc.) of the Barrett WAM arm</description>

  <maintainer email="rguzman@robotnik.es">Roberto Guzmán</maintainer>
  <maintainer email="rnavarro@robotnik.es">Román Navarro</maintainer>

  <license>BSD</license>
  
  <author email="rguzman@robotnik.es">Roberto Guzmán</author>

  <buildtool_depend>catkin</buildtool_depend>


  <export>
  </export>

</package>
